--- a/Website/om-os.html
+++ b/Website/om-os.html
@@ -38,7 +38,7 @@
     <div class="w-container">
       <div class="w-row">
         <div class="w-col w-col-1"></div>
-        <div class="w-col w-col-10"><img src="images/Team-Photo-180120-1024x768.jpg" srcset="images/Team-Photo-180120-1024x768-p-500.jpeg 500w, images/Team-Photo-180120-1024x768-p-800.jpeg 800w, images/Team-Photo-180120-1024x768.jpg 1024w" sizes="(max-width: 767px) 96vw, (max-width: 991px) 79vw, 780.0000610351562px" alt="" class="image-20">
+        <div class="w-col w-col-10"><img src="images/teamPhoto.jpg" srcset="images/teamPhoto.jpg 500w, images/teamPhoto.jpg 800w, images/teamPhoto.jpg 1024w" sizes="(max-width: 767px) 96vw, (max-width: 991px) 79vw, 780.0000610351562px" alt="" class="image-20">
           <div class="text-block-4">This is some text inside of a div block.</div>
           <h1 class="forside-overskrift om-os">Vi vil sprede den virtuelle læring i Danmark</h1>
           <div class="med-divider artikel"></div>
