--- a/Website/index.html
+++ b/Website/index.html
@@ -174,9 +174,7 @@
             <div class="w-col w-col-5">
                 <div class="div-block-2">
                     <h1 class="forside-overskrift">Over 50.000 kurser!</h1>
-                    <p class="forside-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
-                        enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum
-                        nulla, </p>
+                    <p class="forside-tekst">Via vores applikation har du mulighed for at lære, socialisere og eksperimenter i op til 50.000 forskellige kurser. Installer applikationen nu og lær løs. </p>
                 </div>
             </div>
             <div class="column-3 w-col w-col-5">
@@ -194,9 +192,7 @@
                 <div class="div-block-4">
                     <h1 class="forside-overskrift fag-boks">Dit ynglings fag er vores ynglings fag. <br>Og vi er først
                         lige begyndt!</h1>
-                    <p class="forside-tekst fag-boks">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros
-                        dolor interdum nulla,</p>
+                    <p class="forside-tekst fag-boks">Du har lige nu mulighed for at møde en gammel grækker i sit eget hjem, danne dit helt eget molekyle og meget meget mere med vores intergretet læringsværktøjer</p>
                 </div>
             </div>
             <div class="w-col w-col-1"></div>
@@ -234,14 +230,12 @@
             <div class="w-col w-col-10">
                 <div>
                     <h1 class="forside-overskrift">En verden af viden</h1>
-                    <p class="forside-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
-                        enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum
-                        nulla, ut commodo diam libero vitae erat. </p>
+                    <p class="forside-tekst"> Verdnen er fuld af viden. Vi har prøvet at gøre denne viden letter at få, ved brug af VR. for at komme igang skal du oprette en bruger og tilmelde dig det kursus du gerne vil prøve. Derefter kan du downloade appen og så er du godt i gang.</p>
                     <h1 class="forside-overskrift">Vi tilbyder dig:</h1>
                     <ul>
-                        <li class="forside-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li class="forside-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li class="forside-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                        <li class="forside-tekst">Udforske den virtuelle verden på en helt anden måde.</li>
+                        <li class="forside-tekst">Mulighed for at udforske så mange kurser som du har lyst til.</li>
+                        <li class="forside-tekst">Lave så mange kurser som du har lyst til.</li>
                     </ul>
                 </div>
             </div>
@@ -257,9 +251,7 @@
                 <div class="w-col w-col-3"></div>
                 <div class="w-col w-col-6">
                     <h1 class="footer-overskrift">Om os</h1>
-                    <p class="footer-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
-                        enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum
-                        nulla,</p>
+                    <p class="footer-tekst">Vi er en gruppe på 3 gymnasie elever som gerne vil gøre læring frit tilgængeligt til alle, derfor har vi lavet denne applikation.</p>
                 </div>
                 <div class="w-col w-col-3"></div>
             </div>
