placeholder texxt is removed
placeholder text is removed from all sites

--- a/Website/mine-kurser.html
+++ b/Website/mine-kurser.html
@@ -40,7 +40,7 @@
         <div class="w-col w-col-1"></div>
         <div class="column-5 w-col w-col-10">
           <h1 class="forside-overskrift mine-kurser">Mine kurser</h1>
-          <p class="forside-tekst mine-kurser">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p class="forside-tekst mine-kurser">Her kan du se dine tilmeldte kurser. Desværre er denne side ikke færdig da hjemmesiden stadig er under konstruktion.</p>
         </div>
         <div class="w-col w-col-1"></div>
       </div>
@@ -54,7 +54,7 @@
           <div class="w-col w-col-3"></div>
           <div class="w-col w-col-6">
             <h1 class="footer-overskrift">Om os</h1>
-            <p class="footer-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla,</p>
+            <p class="footer-tekst">Vi er en gruppe på 3 gymnasie elever som gerne vil gøre læring frit tilgængeligt til alle, derfor har vi lavet denne applikation.</p>
           </div>
           <div class="w-col w-col-3"></div>
         </div>
