--- a/Website/om-os.html
+++ b/Website/om-os.html
@@ -39,10 +39,9 @@
       <div class="w-row">
         <div class="w-col w-col-1"></div>
         <div class="w-col w-col-10"><img src="images/teamPhoto.jpg" srcset="images/teamPhoto.jpg 500w, images/teamPhoto.jpg 800w, images/teamPhoto.jpg 1024w" sizes="(max-width: 767px) 96vw, (max-width: 991px) 79vw, 780.0000610351562px" alt="" class="image-20">
-          <div class="text-block-4">This is some text inside of a div block.</div>
           <h1 class="forside-overskrift om-os">Vi vil sprede den virtuelle læring i Danmark</h1>
           <div class="med-divider artikel"></div>
-          <p class="forside-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p class="forside-tekst">Vi er en gruppe på 3 gymnasie elever som gerne vil gøre læring frit tilgængeligt til alle, derfor har vi lavet denne applikation.</p>
           <p class="forside-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
           <p class="forside-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
@@ -58,7 +57,7 @@
           <div class="w-col w-col-3"></div>
           <div class="w-col w-col-6">
             <h1 class="footer-overskrift">Om os</h1>
-            <p class="footer-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla,</p>
+            <p class="footer-tekst">Vi er en gruppe på 3 gymnasie elever som gerne vil gøre læring frit tilgængeligt til alle, derfor har vi lavet denne applikation.</p>
           </div>
           <div class="w-col w-col-3"></div>
         </div>
