--- a/Website/opret-kursus.html
+++ b/Website/opret-kursus.html
@@ -65,7 +65,7 @@
                   <div class="form-block w-form">
                     <form id="getCourseName" name="email-form" data-name="Email Form" class="w-clearfix">
                         <label for="courseName" class="forside-tekst">Navn på kursus</label>
-                        <input type="text" class="text-field-2 w-input" maxlength="256" name="field" data-name="Field" placeholder="Mit seje kursus" id="courseName" required>
+                        <input type="text" class="text-field-2 w-input" maxlength="256" name="field" data-name="Field" placeholder="navn på kursuset" id="courseName" required>
                         <input type="submit" value="Næste" data-wait="Please wait..." class="knap w-button" onclick="getLocalNewCourseName()"></form>
                     <div class="w-form-done">
                       <div>Thank you! Your submission has been received!</div>
@@ -79,7 +79,7 @@
               <div data-w-tab="Tab 3" class="w-tab-pane">
                 <div class="div-block-6">
                   <h1 class="forside-overskrift">2. Type</h1>
-                  <p class="forside-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                  <p class="forside-tekst">Her kan du sætte typen på dit kursus. Ind til videre kan du vælge imellem: kemi, fysik, matematik eller geografi.</p>
                   <div class="form-block w-form">
                     <form name="email-form" data-name="Email Form" class="w-clearfix">
                         <label for="name" class="forside-tekst">Lektion</label>
