--- a/Website/find-kursus.html
+++ b/Website/find-kursus.html
@@ -52,10 +52,7 @@
             <div class="w-col w-col-10">
                 <div class="div-block-16" id="courseDisplayContainerDiv">
                     <h1 class="forside-overskrift find-kursus">Find kurser</h1>
-                    <p class="forside-tekst find-kursus">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros
-                        dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id
-                        rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                    <p class="forside-tekst find-kursus">Her kan du finde kuser og tilmelde dig det. Måden du gør dette på er at søge på kursets navn eller søge på kursusets id. Derefter burde der komme en beskrivelse af kurset samt en titel, tryk på titlen af kurset og tryk tilmeld, så er du tilmeldt.</p>
                     <div class="form-block-2 w-form">
                         <form id="email-form" name="email-form" data-name="Email Form" class="w-clearfix"><label
                                 for="name" class="forside-tekst">Navn på kursus</label>
@@ -93,9 +90,7 @@
                 <div class="w-col w-col-3"></div>
                 <div class="w-col w-col-6">
                     <h1 class="footer-overskrift">Om os</h1>
-                    <p class="footer-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
-                        enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum
-                        nulla,</p>
+                    <p class="footer-tekst">Vi er en gruppe på 3 gymnasie elever som gerne vil gøre læring frit tilgængeligt til alle, derfor har vi lavet denne applikation.</p>
                 </div>
                 <div class="w-col w-col-3"></div>
             </div>
