--- a/Website/index.html
+++ b/Website/index.html
@@ -192,7 +192,7 @@
                 <div class="div-block-4">
                     <h1 class="forside-overskrift fag-boks">Dit ynglings fag er vores ynglings fag. <br>Og vi er først
                         lige begyndt!</h1>
-                    <p class="forside-tekst fag-boks">Du har lige nu mulighed for at møde en gammel grækker i sit eget hjem, danne dit helt eget molekyle og meget meget mere med vores intergretet læringsværktøjer</p>
+                    <p class="forside-tekst fag-boks">Du har lige nu mulighed for at møde en gammel græker i sit eget hjem, danne dit helt eget molekyle og meget mere med vores integreret læringsværktøjer</p>
                 </div>
             </div>
             <div class="w-col w-col-1"></div>
@@ -230,7 +230,7 @@
             <div class="w-col w-col-10">
                 <div>
                     <h1 class="forside-overskrift">En verden af viden</h1>
-                    <p class="forside-tekst"> Verdnen er fuld af viden. Vi har prøvet at gøre denne viden letter at få, ved brug af VR. for at komme igang skal du oprette en bruger og tilmelde dig det kursus du gerne vil prøve. Derefter kan du downloade appen og så er du godt i gang.</p>
+                    <p class="forside-tekst"> Verdenen er fuld af viden. Vi har prøvet at gøre denne viden letter at få, ved brug af VR. for at komme i gang skal du oprette en bruger og tilmelde dig det kursus du gerne vil prøve. Derefter kan du downloade appen og så er du godt i gang.</p>
                     <h1 class="forside-overskrift">Vi tilbyder dig:</h1>
                     <ul>
                         <li class="forside-tekst">Udforske den virtuelle verden på en helt anden måde.</li>
@@ -251,7 +251,7 @@
                 <div class="w-col w-col-3"></div>
                 <div class="w-col w-col-6">
                     <h1 class="footer-overskrift">Om os</h1>
-                    <p class="footer-tekst">Vi er en gruppe på 3 gymnasie elever som gerne vil gøre læring frit tilgængeligt til alle, derfor har vi lavet denne applikation.</p>
+                    <p class="footer-tekst">Vi er en gruppe på 3 gymnasieelever som gerne vil gøre læring frit tilgængeligt til alle, derfor har vi lavet denne applikation.</p>
                 </div>
                 <div class="w-col w-col-3"></div>
             </div>
