--- a/Website/om-os.html
+++ b/Website/om-os.html
@@ -41,9 +41,9 @@
         <div class="w-col w-col-10"><img src="images/teamPhoto.jpg" srcset="images/teamPhoto.jpg 500w, images/teamPhoto.jpg 800w, images/teamPhoto.jpg 1024w" sizes="(max-width: 767px) 96vw, (max-width: 991px) 79vw, 780.0000610351562px" alt="" class="image-20">
           <h1 class="forside-overskrift om-os">Vi vil sprede den virtuelle læring i Danmark</h1>
           <div class="med-divider artikel"></div>
-          <p class="forside-tekst">Vi er en gruppe på 3 gymnasie elever som gerne vil gøre læring frit tilgængeligt til alle, derfor har vi lavet denne applikation.</p>
-          <p class="forside-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p class="forside-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p class="forside-tekst">Vi er en gruppe på 3 gymnasie elever som gerne vil gøre læring frit tilgængeligt til alle, derfor har vi lavet denne VR classroom.</p>
+          <p class="forside-tekst">Vi går på Aarhus gymnasie i 3.G. VR classroom er vores eksamensprojekt for IT B som vi afslutter her til sommer. VR classroom er en vider udbygning på et kom it projekt som vi arbejdede på i 1.G, ved navn censor "simulator".</p>
+          <p class="forside-tekst">VR classroom er udarbejdet i løbet af 30 timers skolearbejde samt en masse hjemme arbejde. I alt er der brugt langt over 100 timer på dette produkt.</p> 
         </div>
         <div class="w-col w-col-1"></div>
       </div>
